--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,13 @@ canvas {
   max-width: 1440px;
 }
 
+.roboto-slab-name {
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @layer utilities {
   .flex-center {
     @apply flex items-center justify-center;
