--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ canvas {
   }
 
   .link {
+    @apply text-white flex items-center opacity-0 translate-y-20;
+  }
+
+  .link-actual {
     @apply text-blue hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20;
   }
 
