--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,17 @@ canvas {
   font-style: normal;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer utilities {
   .flex-center {
     @apply flex items-center justify-center;
