--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body {
@@ -20,10 +20,6 @@ body {
   background: #000;
   border-color: #3b3b3b;
   user-select: none;
-}
-
-canvas {
-  touch-action: none;
 }
 
 .screen-max-width {
@@ -148,4 +144,69 @@ canvas {
   .g_fadeIn {
     @apply opacity-0 translate-y-[100px];
   }
+}
+
+* {
+  /* outline: 1px solid #f00 !important; */
+}
+
+.bg-glass {
+  background: rgba(0, 0, 0, 0.61);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.scroll-effect {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
+@keyframes appear-scale {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+@keyframes appear-translateX {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@keyframes appear-clipPath {
+  from {
+    opacity: 0;
+    clip-path: inset(100% 100% 0 0);
+  }
+  to {
+    opacity: 1;
+    clip-path: inset(0 0 0 0);
+  }
+}
+
+.tech-section::-webkit-scrollbar {
+  height: 5px;
+}
+
+.tech-section::-webkit-scrollbar-track {
+  background-color: darkgrey;
+  border-radius: 100px;
+}
+.tech-section::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 100px;
 }
