--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,10 @@ body {
   .g_fadeIn {
     @apply opacity-0 translate-y-[100px];
   }
+
+  .scale_on_hover {
+    @apply transform transition duration-500 hover:scale-[1.02];
+  }
 }
 
 * {
